quick fix: small edits to make appearance on mobile bearable

--- a/index.css
+++ b/index.css
@@ -1,5 +1,11 @@
+:root {
+    --background-color: #2F3E46;
+    --card-color: #354F52;
+    --tertiary-color: #c0b5b9;
+}
+
 body {
-    background-color: #2F3E46;
+    background-color: var(--background-color);
     font-family: "Libre Baskerville", serif;
 }
 
@@ -12,14 +18,16 @@ body {
 
 .main {
     position: absolute;
+    width: 100vw;
 
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 
-    gap: 5rem;
+    gap: 2rem;
 
+    font-size: x-large;
     font-weight: 700;
     color: #c0b5b9;
 }
@@ -29,6 +37,8 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+
+    font-size: x-large;
 }
 
 .article-header {
@@ -37,46 +47,56 @@ body {
     justify-content: center;
     flex-direction: column;
     position: relative;
+
+    font-size: large;
+}
+
+.paragraph-header {
+    font-size: xx-large;
 }
 
 .return-home-button {
     border: 0rem;
     border-radius: 0.5rem;
-    width: 3.5rem;
+    width: 7rem;
     height: 2rem;
 
-    color: #c0b5b9;
-    background-color: #2F3E46;
+    font-size: x-large;
+
+    color: black;
+    background-color: aliceblue;
 
     position: absolute;
     top: 1.6rem;
-    left: -4rem;
+    left: -13.5rem;
 }
 
 .return-home-button:hover {
     transition-duration: 0.2s;
     cursor: pointer;
-    background-color: #354F52;
-    border: 0.2rem solid #c0b5b9;
+    background-color: var(--card-color);
+    border: 0.2rem solid var(--tertiary-color);
 }
 
 .post-button {
     width: 30rem;
-    height: 3rem;
+    height: 5rem;
     border: none;
     border-radius: 0.5rem;
 
+    font-size: xx-large;
+
     margin-bottom: 2rem;
 
-    background-color: #2F3E46;
-    color: #c0b5b9;
+    background-color: var(--background-color);
+    color: var(--tertiary-color);
 }
 
 .post-button:hover {
     transition-duration: 0.2s;
     cursor: pointer;
-    background-color: #354F52;
-    border: 0.2rem solid #c0b5b9;
+    background-color: var(--card-color);
+    border: 0.2rem solid var(--tertiary-color);
 }
 
 .mapping-the-invisible-sky {
@@ -92,10 +112,11 @@ body {
 }
 
 .header {
+    margin-top: 1rem;
     height: 15rem;
     width: 38rem;
 
-    background-color: #354F52;
+    background-color: var(--card-color);
     border-radius: 0.5rem;
     /* box-shadow: 0rem 0rem 1rem 0rem #646869; */
 
@@ -111,7 +132,9 @@ body {
     height: 80%;
     width: 40rem;
 
-    background-color: #354F52;
+    font-size: xx-large;
+
+    background-color: var(--card-color);
     border-radius: 0.5rem;
     /* box-shadow: 0rem 0rem 1rem 0rem #646869; */
 
@@ -125,7 +148,7 @@ body {
     height: 5rem;
     width: 40rem;
 
-    background-color: #354F52;
+    background-color: var(--card-color);
     border-radius: 0.5rem;
     /* box-shadow: 0rem 0rem 1rem 0rem #646869; */
 
@@ -134,7 +157,7 @@ body {
     justify-content: center;
     flex-direction: row;
 
-    margin-top: 5rem;
+    margin-top: 0rem;
     gap: 5rem;
 }
 
@@ -142,8 +165,8 @@ body {
     border-radius: 0.5rem;
     height: auto;
     width: auto;
-    max-width: 15rem;
-    max-height: 15rem;
+    max-width: 25rem;
+    max-height: 25rem;
 
     filter: brightness(50%);
     filter: saturate(50%);
